--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,68 @@
-Flask
-Flask-Cors
-Flask-SQLAlchemy
-python-telegram-bot
-hypercorn
+aiofiles==24.1.0
+aiohappyeyeballs==2.6.1
+aiohttp==3.12.14
+aiohttp_socks==0.10.1
+aiosignal==1.4.0
+anticaptchaofficial==1.0.67
+anyio==4.9.0
+asgiref==3.9.1
+asyncio==3.4.3
+attrs==25.3.0
+beautifulsoup4==4.13.4
+blinker==1.9.0
+bs4==0.0.2
+certifi==2025.7.14
+cffi==1.17.1
+charset-normalizer==3.4.2
+click==8.2.2
+cloudscraper==1.2.71
+colorama==0.4.6
+config==0.5.1
+curl_cffi==0.12.0
+dotenv==0.9.9
+fake-useragent==2.2.0
+Faker==37.4.2
+Flask==3.1.1
+flask-cors==6.0.1
+Flask-SQLAlchemy==3.1.1
+frozenlist==1.7.0
+greenlet==3.2.3
+h11==0.16.0
+h2==4.2.0
+hpack==4.1.0
+httpcore==1.0.9
+httpx==0.28.1
+Hypercorn==0.17.3
+hyperframe==6.1.0
+idna==3.10
+itsdangerous==2.2.0
+Jinja2==3.1.6
+MarkupSafe==3.0.2
+multidict==6.6.3
+names==0.3.0
+playwright==1.53.0
+priority==2.0.0
+propcache==0.3.2
+py==1.11.0
+pyaes==1.6.1
+pycparser==2.22
+pyee==13.0.0
+pyparsing==3.2.3
+Pyrogram==2.0.106
+PySocks==1.7.1
+pyTelegramBotAPI==4.27.0
+python-dotenv==1.1.1
+python-socks==2.7.1
+python-telegram-bot==22.3
+requests==2.32.4
+requests-toolbelt==1.0.0
+sniffio==1.3.1
+soupsieve==2.7
+SQLAlchemy==2.0.42
+telebot==0.0.5
+typing_extensions==4.14.1
+tzdata==2025.2
+urllib3==2.5.0
+Werkzeug==3.1.3
+wsproto==1.2.0
+yarl==1.20.1
