--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,8 @@
+Flask
+Flask-Cors
+Flask-SQLAlchemy
+requests
+Werkzeug
 aiofiles==24.1.0
 aiohappyeyeballs==2.6.1
 aiohttp==3.12.14
@@ -66,3 +71,4 @@ urllib3==2.5.0
 Werkzeug==3.1.3
 wsproto==1.2.0
 yarl==1.20.1
+
